--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
    <title>例１</title>
    <head>
 <body>
-  <img src="example1.png">
+  <img src="example1.png"width="300" height="200">
 </body>
 <html>
